# reesd-stack

./: README.md  build-images-helper.sh  build-in-vm.sh  build.sh  packages-7.8.4.txt  packages.txt  release.nix  stackage-lts-2.22-ghc-7.8.4.txt
images/stack/: Dockerfile  Dockerfile-lts-8.0.2-reesd
images/stack-7.8.4/: Dockerfile
images/stack-dependencies/: Dockerfile  Dockerfile-7.10.3  Dockerfile-7.8.4  Dockerfile-8.0.2  build-depends.ghc-7.8.4  build-depends.lts-2.22  build-depends.lts-2.22-reesd  build-depends.lts-6.27  build-depends.lts-7.15  build.sh  generate-build-depends.sh  reesd-dependencies.cabal  reesd-dependencies.cabal.template  stackage-lts-6.27-ghc-7.10.3.txt  stackage-lts-6.31-ghc-7.10.3-reesd.txt  stackage-lts-6.31-ghc-7.10.3.txt  stackage-lts-7.15-ghc-8.0.1.txt  stackage-lts-9.21-ghc-8.0.2-reesd.txt  stackage-lts-9.21-ghc-8.0.2.txt
images/stack-lts-7.10.3/: Dockerfile
images/stack-lts-7.8.4/: Dockerfile
images/stack-lts-7.8.4-reesd/: Dockerfile
images/stack-lts-8.0.1/: Dockerfile
stackage-overlay/: default.nix
