name:                reesd-dependencies
version:             0.1.0
Cabal-Version:       >= 1.8
synopsis:            Reesd depdendencies builder.
description:         Build dependencies for the Reesd code base.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/noteed/reesd-stack

source-repository head
  type: git
  location: git://github.com/noteed/reesd-stack.git

executable reesd-dependencies
  hs-source-dirs:      bin
  main-is:             reesd-dependencies.hs
  build-depends:       

    HsOpenSSL,
    MonadCatchIO-transformers,
    SHA,
    aeson,
    attoparsec,
    authenticate,
    base,
    binary >= 0.7,
    blaze-builder,
    blaze-builder-conduit,
    blaze-builder-enumerator,
    blaze-html,
    blaze-markup,
    bytestring,
    case-insensitive,
    cereal,
    cipher-aes,
    cmdargs,
    comonad,
    containers,
    contravariant,
    cprng-aes,
    crypto-numbers,
    crypto-pubkey,
    directory,
    either,
    engine-io,
    engine-io-snap,
    filemanip,
    filepath,
    foreign-store,
    ghcid,
    hashable,
    hledger == 0.26,
    http-conduit,
    http-streams,
    io-streams,
    lens,
    mime-mail,
    monad-control,
    mtl,
    network,
    old-locale,
    postgresql-simple,
    primitive,
    process,
    profunctors,
    pwstore-fast,
    random,
    regex-posix,
    resource-pool-catchio,
    safecopy,
    semigroupoids,
    shake,
    smtp-mail,
    snap,
    snap-blaze,
    snap-core,
    snap-server,
    snaplet-postgresql-simple,
    socket-io,
    tagged,
    tasty,
    tasty-hunit,
    tasty-hspec,
    tasty-quickcheck,
    tasty-smallcheck,
    template,
    temporary,
    text,
    thyme,
    time,
    tls,
    transformers,
    transformers-compat,
    unix,
    unordered-containers,
    uuid,
    vector,
    websockets,
    websockets-snap,
    xmlhtml
